# ai-coach

./: .env.example  .gitignore  Makefile  README.md  TZ.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_workouts.py  0003_nutrition.py  0004_subjective.py  0005_health.py  0006_body_measurements.py  0007_add_bodyweight_and_superset_support.py  0011_add_tracked_exercises_table.py  0012_enhance_personal_records.py  0013_fix_tracked_exercises_fk.py  98ba9055b714_split_measurements_to_left_right.py
backend/app/: main.py  seed.py
backend/app/agents/: __init__.py  base.py  config.py  food_recognizer.py  manager.py  medical_analyzer.py  nutrition_analyzer.py  pattern_finder.py  planner.py  workout_analyzer.py
backend/app/core/: cache.py  config.py  crypto.py  db.py  deps.py  security.py
backend/app/jobs/: worker.py
backend/app/models/: __init__.py  auth_identity.py  body_measurement.py  exercise.py  health.py  nutrition.py  personal_record.py  subjective.py  tracked_exercise.py  user.py  workout.py
backend/app/modules/ai/: router.py  schemas.py  service.py
backend/app/modules/auth/: google.py  router.py  schemas.py  service.py  telegram.py
backend/app/modules/exercises/: catalog_data.py  router.py  schemas.py  service.py
backend/app/modules/health/: router.py  schemas.py  service.py
backend/app/services/: ai.py  insights.py  targets.py
backend/app/tests/: test_insights.py  test_security.py  test_targets.py  test_telegram.py
(+99 files in other folders)
